--- a/text.html
+++ b/text.html
@@ -9,11 +9,11 @@
 <body>
     <h1>🌚🌚🌚</h1>
     <h2>Liebe</h2>
-    <p>This is a test
-    It has nothing to do with anything
-    It is just a test
+    <p>This is a test <br>
+    It has nothing to do with anything <br>
+    It is just a test <br> <br>
     
-    At least I think so
+    At least I think so <br> <br>
     
     Hehe-</p>    
 </body>
